fixed dark mode button

--- a/src/App.css
+++ b/src/App.css
@@ -1210,7 +1210,8 @@ body {
 .dark-mode-toggle svg {
   height: 90%;
   width: auto;
-  margin-left: -4px;
+  margin-left: -2px;
+  margin-top: 2px;
 }
 
 
@@ -1433,3 +1434,17 @@ body {
   
 }
 
+
+/* Default light mode styles */
+.dark-mode-toggle {
+  background-color: #ffffff; /* light background */
+  color: var(--background-dark); /* dark text color */
+  /* other styles */
+}
+
+/* Dark mode styles */
+.dark-mode .dark-mode-toggle {
+  background-color: var(--background-dark); /* dark background */
+  color: var(--background-light); /* light text color */
+  /* other styles */
+}
